# polygon

./: README.md
fluent/: README.md  pyproject.toml
fluent/fluent/: french_deck.py  start.py  vector.py
json/: Cargo.toml
json/src/: cli.rs  fs_utils.rs  lib.rs  main.rs  validator.rs
json/src/json_lexer/: lexer.rs  token.rs
onlinejudge/: 3n-plus-1.py
wc/: Cargo.toml
wc-py/: main.py
wc/src/: main.rs
