[tool.poetry]
name = "fluent"
version = "0.1.0"
description = ""
authors = ["Nurseiit Abdimomyn"]
readme = "README.md"

[tool.poetry.scripts]
start = "fluent.start:start"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
