[tool.poetry]
name = "fluent"
version = "0.1.0"
description = ""
authors = ["Nurseiit Abdimomyn"]
readme = "README.md"

[tool.poetry.scripts]
start = "fluent.start:start"

[tool.poetry.dependencies]
python = "^3.10"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
